# vedaksha

./: .bw-namespaces  .dockerignore  .gitignore  .vercelignore  CHANGELOG-v3.0.0.md  CHANGELOG-v3.1.0.md  CHANGELOG-v4.0.0.md  CONTRIBUTING.md  Cargo.toml  DATA_PROVENANCE.md  Dockerfile  LICENSE  LICENSE-APACHE  MAINTENANCE.md  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  glama.json  package-lock.json
bindings/python/: ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml  vedaksha.pyi
bindings/python/engine/: Cargo.toml
bindings/python/engine/src/: lib.rs
bindings/python/scripts/: build-wasm.sh
bindings/python/src/: lib.rs
bindings/python/src/vedaksha/: __init__.py  _engine.py  cli.py  client.py  errors.py  rest.py
bindings/python/src/vedaksha/mcp/: __init__.py  __main__.py  server.py
bindings/python/tests/: test_ephemeris.py  test_library.py  test_mcp.py  test_rest.py
bindings/python/tests/conformance/: generate_fixture.py  native_fixture.json  test_parity.py
crates/vedaksha/: Cargo.toml
crates/vedaksha-astro/: Cargo.toml
crates/vedaksha-astro/src/: chart.rs  composite.rs  dignity.rs  lib.rs  sidereal.rs  synastry.rs  transits.rs
crates/vedaksha-astro/src/aspects/: mod.rs  patterns.rs
crates/vedaksha-astro/src/houses/: alcabitius.rs  campanus.rs  equal.rs  koch.rs  mod.rs  morinus.rs  placidus.rs  porphyry.rs  regiomontanus.rs  sripathi.rs  whole_sign.rs
crates/vedaksha-emit/: Cargo.toml
crates/vedaksha-emit/src/: cypher.rs  embedding_text.rs  json_graph.rs  jsonld.rs  lib.rs  surreal.rs
crates/vedaksha-ephem-core/: Cargo.toml
crates/vedaksha-ephem-core/benches/: ephemeris.rs
crates/vedaksha-ephem-core/examples/: capture_legacy_oracle.rs  dump_coefficients.rs  moon_audit.rs
crates/vedaksha-ephem-core/src/: aberration.rs  bodies.rs  cache.rs  coordinates.rs  delta_t.rs  error.rs  julian.rs  lib.rs  light_time.rs  nodes.rs  nutation.rs  obliquity.rs  precession.rs  sidereal_time.rs
crates/vedaksha-ephem-core/src/analytical/: elp_mpp02.rs  mod.rs  simd_trig.rs  vsop87a.rs
crates/vedaksha-ephem-core/src/analytical/coefficients/: earth.rs  jupiter.rs  loader.rs  mars.rs  mercury.rs  mod.rs  moon_distance.rs  moon_latitude.rs  moon_longitude.rs  neptune.rs  saturn.rs  uranus.rs  venus.rs
crates/vedaksha-ephem-core/src/analytical/coefficients/earth/: x0.bin.sha256  x1.bin.sha256  x2.bin.sha256  x3.bin.sha256  x4.bin.sha256  x5.bin.sha256  y0.bin.sha256  y1.bin.sha256  y2.bin.sha256  y3.bin.sha256  y4.bin.sha256  z0.bin.sha256  z1.bin.sha256  z2.bin.sha256  z3.bin.sha256  z4.bin.sha256  z5.bin.sha256
crates/vedaksha-ephem-core/src/analytical/coefficients/jupiter/: x0.bin.sha256  x1.bin.sha256  x2.bin.sha256  x3.bin.sha256  x4.bin.sha256  x5.bin.sha256  y0.bin.sha256  y1.bin.sha256  y2.bin.sha256  y3.bin.sha256  y4.bin.sha256  y5.bin.sha256  z0.bin.sha256  z1.bin.sha256  z2.bin.sha256  z3.bin.sha256  z4.bin.sha256  z5.bin.sha256
crates/vedaksha-ephem-core/src/analytical/coefficients/mars/: x0.bin.sha256  x1.bin.sha256  x2.bin.sha256  x3.bin.sha256  x4.bin.sha256  x5.bin.sha256  y0.bin.sha256  y1.bin.sha256  y2.bin.sha256  y3.bin.sha256  y4.bin.sha256  y5.bin.sha256  z0.bin.sha256  z1.bin.sha256  z2.bin.sha256  z3.bin.sha256  z4.bin.sha256  z5.bin.sha256
crates/vedaksha-ephem-core/src/analytical/coefficients/mercury/: x0.bin.sha256  x1.bin.sha256  x2.bin.sha256  x3.bin.sha256  x4.bin.sha256  y0.bin.sha256  y1.bin.sha256  y2.bin.sha256  y3.bin.sha256  y4.bin.sha256  z0.bin.sha256  z1.bin.sha256  z2.bin.sha256  z3.bin.sha256  z4.bin.sha256
crates/vedaksha-ephem-core/src/analytical/coefficients/moon_distance/: main.bin.sha256  pert_0.bin.sha256  pert_1.bin.sha256  pert_2.bin.sha256
crates/vedaksha-ephem-core/src/analytical/coefficients/moon_latitude/: main.bin.sha256  pert_0.bin.sha256  pert_1.bin.sha256  pert_2.bin.sha256  pert_3.bin.sha256
crates/vedaksha-ephem-core/src/jpl/: daf.rs  mod.rs  reader.rs  spk2.rs
crates/vedaksha-ephem-core/tests/: analytical_accuracy.rs  analytical_oracle.rs  binary_blob_parity.rs  chart_lunar_evals.rs  comprehensive_comparison.rs  coordinates_test.rs  extended_comparison.rs  lunar_horizons.rs  lunar_legacy_oracle.rs  lunar_paper_examples.rs  oracle_comparison.rs  spk_reader_test.rs
crates/vedaksha-ephem-core/tests/common/: mod.rs
crates/vedaksha-graph/: Cargo.toml  LICENSE
crates/vedaksha-graph/src/: chart_graph.rs  classification.rs  ids.rs  lib.rs  ontology.rs
crates/vedaksha-graph/src/emitters/: cypher.rs  embedding_text.rs  json_graph.rs  jsonld.rs  mod.rs  surreal.rs
crates/vedaksha-locale/: Cargo.toml
crates/vedaksha-locale/src/: aspects.rs  dashas.rs  deities.rs  dignities.rs  houses.rs  karanas.rs  lib.rs  nakshatras.rs  panchanga_yogas.rs  planets.rs  signs.rs  yogas.rs
crates/vedaksha-math/: Cargo.toml
crates/vedaksha-math/src/: angle.rs  chebyshev.rs  interpolation.rs  lib.rs  matrix.rs
crates/vedaksha-mcp/: Cargo.toml
crates/vedaksha-mcp/src/: lib.rs  main.rs  server.rs  validation.rs
crates/vedaksha-mcp/src/tools/: compute_ashtakavarga.rs  compute_bhavas.rs  compute_combustion.rs  compute_dasha.rs  compute_drishti.rs  compute_gochara.rs  compute_karakas.rs  compute_natal.rs  compute_panchanga.rs  compute_shadbala.rs  compute_transit.rs  compute_vargas.rs  emit_graph.rs  mod.rs  search_muhurta.rs  search_transits.rs
crates/vedaksha-mcp/tests/: invariants.rs  mcp_consistency.rs
crates/vedaksha-vedic/: Cargo.toml
crates/vedaksha-vedic/src/: ashtakavarga.rs  bhava.rs  combustion.rs  compatibility.rs  drishti.rs  gochara.rs  graha.rs  karaka.rs  lib.rs  muhurta.rs  nakshatra.rs  panchanga.rs  planet.rs  shadbala.rs  yoga.rs
crates/vedaksha-vedic/src/dasha/: ashtottari.rs  chara.rs  mod.rs  narayana.rs  vimshottari.rs  yogini.rs
crates/vedaksha-vedic/src/varga/: mod.rs
crates/vedaksha-wasm/: Cargo.toml
crates/vedaksha-wasm/src/: lib.rs
crates/vedaksha/src/: lib.rs
crates/vedaksha/src/locale/: aspects.rs  dashas.rs  deities.rs  dignities.rs  houses.rs  karanas.rs  mod.rs  nakshatras.rs  panchanga_yogas.rs  planets.rs  signs.rs  yogas.rs
(+164 files in other folders)
