[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vedaksha"
version = "1.0.0"
description = "Vedākṣa — Astronomical ephemeris and astrological computation"
requires-python = ">=3.10"
license = "BSL-1.1"
authors = [{name = "ArthIQ Labs LLC", email = "info@arthiq.net"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
