[package]
name = "vedaksha-astro"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Western astrology: house systems, aspects, dignities, chart computation"

[dependencies]
vedaksha-math = { version = "1.6.0", path = "../vedaksha-math" }
vedaksha-ephem-core = { version = "1.6.0", path = "../vedaksha-ephem-core" }
libm = "0.2"
serde = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["vedaksha-ephem-core/std"]
