[package]
name = "vedaksha-ephem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Astronomy engine: JPL DE441 reader, coordinate transformations, precession, nutation"

[dependencies]
libm = "0.2"
vedaksha-math = { version = "2.2.0", path = "../vedaksha-math" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# Path-only dev-deps: these crates depend on ephem-core (circular), so they
# cannot exist on crates.io until ephem-core is published. Omitting the
# version field tells cargo to treat them as local-only for testing and
# not require them during `cargo publish`.
vedaksha-astro = { path = "../vedaksha-astro" }
vedaksha-vedic = { path = "../vedaksha-vedic" }

[features]
default = ["std"]
std = []
