[package]
name = "vedaksha-ephem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Astronomy/ephemeris engine: JPL DE440s/DE441 SPK reader, VSOP87A, ELP/MPP02, precession, nutation"
keywords = ["ephemeris", "astronomy", "jpl", "vsop87", "orbital"]
categories = ["science", "mathematics"]

[dependencies]
libm = "0.2"
vedaksha-math = { version = "4.0.0", path = "../vedaksha-math" }
# SIMD lanes (safe wrapper over core::arch; no_std). Used to vectorize the
# ELP/MPP02 lunar-series trig evaluation.
wide = { version = "0.7", default-features = false }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# Path-only dev-deps: these crates depend on ephem-core (circular), so they
# cannot exist on crates.io until ephem-core is published. Omitting the
# version field tells cargo to treat them as local-only for testing and
# not require them during `cargo publish`.
vedaksha-astro = { path = "../vedaksha-astro" }
vedaksha-vedic = { path = "../vedaksha-vedic" }
criterion = "0.5"

[features]
default = ["std"]
std = []

[[bench]]
name = "ephemeris"
harness = false
