[package]
name = "vedaksha-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Graph data model and ontology for astronomical/astrological charts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
std = []
# Emitters: Neo4j Cypher, SurrealDB, JSON-LD, plain JSON, RAG embedding text.
# Folded in from the standalone `vedaksha-emit` crate (v2.x) in v3.0.0.
emitters = []
