[package]
name = "vedaksha-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "WASM bindings for Vedākṣa astronomical computation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vedaksha-math = { version = "1.4.0", path = "../vedaksha-math" }
vedaksha-ephem-core = { version = "1.4.0", path = "../vedaksha-ephem-core" }
vedaksha-astro = { version = "1.4.0", path = "../vedaksha-astro" }
vedaksha-vedic = { version = "1.4.0", path = "../vedaksha-vedic" }
vedaksha-graph = { version = "1.4.0", path = "../vedaksha-graph" }
vedaksha-emit = { version = "1.4.0", path = "../vedaksha-emit" }
vedaksha-locale = { version = "1.4.0", path = "../vedaksha-locale" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
