[package]
name = "vedaksha-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "WASM bindings for Vedākṣha astronomical computation"
# Not published to crates.io — distributed via npm as `vedaksha-wasm` only.
# v3.0.0 stopped publishing this crate to crates.io because the source build
# is awkward (wasm-bindgen toolchain) and the npm package is the canonical
# delivery channel. Build from source still works via path dependency.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vedaksha-math = { version = "4.0.0", path = "../vedaksha-math" }
vedaksha-ephem-core = { version = "4.0.0", path = "../vedaksha-ephem-core" }
vedaksha-astro = { version = "4.0.0", path = "../vedaksha-astro" }
vedaksha-vedic = { version = "4.0.0", path = "../vedaksha-vedic" }
vedaksha-graph = { version = "4.0.0", path = "../vedaksha-graph", features = ["emitters"] }
vedaksha = { version = "4.0.0", path = "../vedaksha", features = ["locale"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

# wasm-pack post-processing. `--all-features` lets wasm-opt accept every wasm
# feature Rust emits (SIMD from the +simd128 build, plus bulk-memory,
# mutable-globals, sign-ext, …) — a bare `--enable-simd` would disable the
# others and wasm-opt's validator then rejects the bulk-memory ops.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--all-features']
