[package]
name = "vedaksha"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Vedic and Western astrology engine — ephemeris, charts, dashas, nakshatras, and more"

[dependencies]
vedaksha-math = { version = "3.0.0", path = "../vedaksha-math" }
vedaksha-ephem-core = { version = "3.0.0", path = "../vedaksha-ephem-core" }
vedaksha-astro = { version = "3.0.0", path = "../vedaksha-astro" }
vedaksha-vedic = { version = "3.0.0", path = "../vedaksha-vedic" }
vedaksha-graph = { version = "3.0.0", path = "../vedaksha-graph", features = ["emitters"] }

[features]
default = ["std"]
std = ["vedaksha-ephem-core/std"]
# Localization lookup tables (planet/sign/nakshatra names in 7 languages).
# Folded in from the standalone `vedaksha-locale` crate (v2.x) in v3.0.0.
locale = []
