# C-ABI wasm shim for the Python binding. Like `vedaksha-wasm`, this is a
# workspace member that is NOT published to crates.io — it exists only to be
# compiled to `wasm32-unknown-unknown` and hosted by the Python package via
# wasmtime. See bindings/python/ARCHITECTURE.md.
[package]
name = "vedaksha-py-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "C-ABI wasm32 host shim for the Vedākṣha engine (Python binding artifact)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vedaksha-ephem-core = { path = "../../../crates/vedaksha-ephem-core" }
vedaksha-mcp = { path = "../../../crates/vedaksha-mcp", default-features = false, features = ["std"] }
# Release profile (opt-level 3, fat LTO, strip) is inherited from the workspace root.
